1999-10-17  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>

	* rwlock.c (pthread_rwlock_destroy): Add cast to remove compile
	warning.

	* condvar.c (pthread_cond_broadcast): Only release semaphores
	if there are waiting threads.

1999-10-15  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>

	* condvar.c (cond_wait_cleanup): New static cleanup handler for
	cond_timedwait;
	(cond_timedwait): pthread_cleanup_push args changed;
	canceling a thread while it's in pthread_cond_wait
	will now decrement the waiters count and cleanup if it's the
	last waiter.
	- Lorin Hochstein <lmh@xiphos.ca> and 
	  Peter Slacik <Peter.Slacik@tatramed.sk>;
	the last waiter will now reset the CV's wasBroadcast flag
	- Graham Dumpleton <Graham.Dumpleton@ra.pad.otc.telstra.com.au>.

Thu Sep 16 1999  Ross Johnson  <rpj@swan.canberra.edu.au>

	* rwlock.c (pthread_rwlock_destroy): Add serialisation.
	(_rwlock_check_need_init): Check for detroyed rwlock.
	* rwlock.c: Check return codes from _rwlock_check_need_init();
	modify comments; serialise access to rwlock objects during
	operations; rename rw_mutex to rw_lock.
	* implement.h: Rename rw_mutex to rw_lock.
	* mutex.c (pthread_mutex_destroy): Add serialisation.
	(_mutex_check_need_init): Check for detroyed mutex.
	* condvar.c (pthread_cond_destroy): Add serialisation.
	(_cond_check_need_init): Check for detroyed condvar.
	* mutex.c: Modify comments.
	* condvar.c: Modify comments.

Sat Sep 10 12:56:13 1999  Ross Johnson  <rpj@swan.canberra.edu.au>

	The following code for POSIX read/write locks was contributed
	by Aurelio Medina.

	* implement.h (pthread_rwlock_t_): Add.
	* pthread.h (pthread_rwlock_t): Add.
	(PTHREAD_RWLOCK_INITIALIZER): Add.
	Add rwlock function prototypes.
	* rwlock.c: New module.
	* pthread.def: Add new rwlock functions.
	* private.c (_pthread_processInitialize): initialise
	_pthread_rwlock_test_init_lock critical section.
	* global.c (_pthread_rwlock_test_init_lock): Add.
